KIK-1886, fix issue with letters being cut off

--- a/corporate/assets/less/layout/_main.less
+++ b/corporate/assets/less/layout/_main.less
@@ -328,6 +328,7 @@ input[type=submit].input-lg,
     white-space: nowrap;
     text-overflow: ellipsis;
 		color: #99cc66;
+    line-height: 32px;
 	}
 	
 	address {
